javascript now working semlessly (on my computer)

--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=Russo+One|Ubuntu" rel="stylesheet">
   <link href="css/index.css" rel="stylesheet">
+  <script src="js/sticky.js"></script>
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -30,14 +31,8 @@
 
   <div class="container home">
 
-    <header class="intro">
-      <img src="img/main-header.png" alt="Come to Space with Us!">
-
-      <h2>Lift Off</h2>
-
-      <p>As we got further and further away, it [the Earth] diminished in size. Finally it shrank to the size of a
-        marble, the most beautiful you can imagine. That beautiful, warm, living object looked so fragile, so delicate,
-        that if you touched it with a finger it would fall apart. Seeing this has to change a man.</p>
+    <header class="contact">
+      <h1>Contact Us!</h1>
     </header>
 
     <section class="space-images">
@@ -83,7 +78,6 @@
     </footer>
 
   </div>
-  <script src="js/sticky.js"></script>
 </body>
 
 </html>
