--- a/contact.html
+++ b/contact.html
@@ -3,81 +3,73 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SpaceWalkers</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SpaceWalkers</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Russo+One|Ubuntu" rel="stylesheet">
-  <link href="css/index.css" rel="stylesheet">
-  <script src="js/sticky.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Russo+One|Ubuntu" rel="stylesheet">
+    <link href="css/index.css" rel="stylesheet">
+    <script src="js/sticky.js"></script>
 
-  <!--[if lt IE 9]>
+    <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
 </head>
 
 <body>
 
-  <nav>
-    <h1>SpaceWalkers</h1>
-    <div class="links">
-      <a href="index.html">Home</a>
-      <a href="#">About Us</a>
-      <a href="#">Blog</a>
-      <a href="contact.html">Contact</a>
-      <a href="#">Sign In</a>
-    </div>
-  </nav>
-
-  <div class="container home">
-
-    <header class="contact">
-      <h1>Contact Us!</h1>
-    </header>
-
-    <section class="space-images">
-      <img src="img/blast.png" class="blast" alt="Rocket blasting off">
-      <img src="img/sky.png" class="sky" alt="Space sky image">
-      <img src="img/launch.png" class="launch" alt="Launching rocket">
-    </section>
-
-    <section class="visit-planets">
-
-      <h3>Can We Visit Planets?</h3>
-
-      <p>Never in all their history have men been able truly to conceive of the world as one: a single sphere, a globe,
-        having the qualities of a globe, a round earth in which all the directions eventually meet.</p>
-
-      <p>Which there is no center because every point, or none, is center — an equal earth which all men occupy as
-        equals. The airman's earth, if free men make it.</p>
-    </section>
-
-    <section class="walk">
-      <div class="walk-text">
-        <h3>Let's Go For A Walk</h3>
-
-        <p>The Earth was small, light blue, and so touchingly alone, our home that must be defended like a holy relic.
-          The Earth was absolutely round.</p>
-
-        <p>Suddenly struck me that that tiny pea, pretty and blue, was the Earth. I put up my thumb and shut one eye,
-          and my thumb blotted out the planet Earth.</p>
-
-        <div class="btn">
-          Sign Up
+    <nav>
+        <h1>SpaceWalkers</h1>
+        <div class="links">
+            <a href="index.html">Home</a>
+            <a href="#">About Us</a>
+            <a href="#">Blog</a>
+            <a href="contact.html">Contact</a>
+            <a href="#">Sign In</a>
         </div>
-      </div>
+    </nav>
 
-      <div class="walk-img">
-        <img src="img/space-walk.png" alt="Space walking astronaut">
-      </div>
+    <div class="container contact">
 
-    </section>
+        <header class="intro">
+            <h1>Contact Us!</h1>
+        </header>
 
-    <footer>
-      <p>Copyright SpaceWalkers 2018</p>
-    </footer>
+        <section class="form">
+            <h2>Magazine Sub:</h2>
+            <form action="#">
+                <label for="first">First Name</label>
+                <input type="text" placeholder="Your first name">
+                <label for="last">Last Name</label>
+                <input type="text" placeholder="Your last name">
+                <label for="comm">Address</label>
+                <textarea name="comm" id="comm" cols="30" rows="10" placeholder="Your address"></textarea>
+                <input type="submit" value="Submit">
+            </form>
+        </section>
 
-  </div>
+        <section class="cu">
+            <h2>Contact Us Via:</h2>
+            <p>
+                E-mail: <a href="mailto:webmaster@something.com">webmaster@something.com</a>
+
+                Phone: <a href="tel:+11234567890">(123) 456-7890</a>
+            </p>
+            Address:
+            <address>123 Some Road
+                Some City, ST
+                12345</address>
+
+
+            Fax: <a href="fax:9876543210">(987) 654-3210</a>
+        </section>
+
+        <footer>
+            <p>Copyright SpaceWalkers 2018</p>
+        </footer>
+
+    </div>
+    <script src="js/sticky.js"></script>
 </body>
 
 </html>
