--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>SpaceWalkers</title>
 
   <link href="https://fonts.googleapis.com/css?family=Russo+One|Ubuntu" rel="stylesheet">
@@ -17,21 +17,12 @@
 
 <body>
 
-  <nav>
-    <h1>SpaceWalkers</h1>
-    <div class="links">
-      <a href="index.html">Home</a>
-      <a href="#">About Us</a>
-      <a href="#">Blog</a>
-      <a href="contact.html">Contact</a>
-      <a href="#">Sign In</a>
-    </div>
-  </nav>
+  <!-- navigation code here -->
 
   <div class="container home">
 
     <header class="intro">
-      <img src="img/main-header.png" alt="Come to Space with Us!">
+      <!-- image code here -->
 
       <h2>Lift Off</h2>
 
@@ -83,7 +74,6 @@
     </footer>
 
   </div>
-  <script src="js/sticky.js"></script>
 </body>
 
 </html>
