--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>SpaceWalkers</title>
 
@@ -17,12 +18,22 @@
 
 <body>
 
-  <!-- navigation code here -->
+  <nav>
+    <h1>SpaceWalkers</h1>
+    <div>
+      <a href="index.html">Home</a>
+      <a href="#">About Us</a>
+      <a href="#">Blog</a>
+      <a href="contact.html">Contact</a>
+      <a href="#">Sign In</a>
+    </div>
+  </nav>
 
   <div class="container home">
 
     <header class="intro">
-      <!-- image code here -->
+
+      <div class="header"></div>
 
       <h2>Lift Off</h2>
 
